Description and Four-Boxes

--- a/index.html
+++ b/index.html
@@ -23,5 +23,92 @@
         </div>
     </section>
 
+    <section class="description-area">
+        <div class="description-text-area">
+            <h2>LEARNING SACRIFICE AND LOVE FROM EID AL-ADHA</h2>
+            <p>Eid Al-Adha, one of the holiest holidays in Islam, is the celebration of Prophet Ibrahim’s devotion and
+                love towards God, as shown in his willingness to even sacrifice his own son for Allah. Before Ibrahim
+                could sacrifice his son however, God provided a sacrificial lamb instead, saving Ibrahim’s son and
+                rewarding him with love and mercy.</p>
+            <p>Muslims around the world therefore celebrate Eid Al-Adha as the end of the Hajj pilgrimage in a
+                commemoration of devotion and worship to Allah. Animals are sacrificed in remembrance of Prophet
+                Ibrahim’s own offer of sacrifice, with one third of the animal given to charity, another third to
+                family, friends, or neighbors, and the final third towards one’s own home.</p>
+            <button class="donate-button">Explore More</button>
+        </div>
+        <div class="description-video-area">
+            <iframe width="440" height="300" src="https://www.youtube.com/embed/BgL3sXi7z7w"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div>
+    </section>
+
+    <section class="description-area">
+        <div class="description-photo-area">
+            <img src="./images/dua3.PNG" alt="">
+        </div>
+        <div class="description-text-area">
+            <h2>What to Learn from the Holy Festival of Sacrifice?</h2>
+            <p>Although Eid Al-Adha is a time for family gatherings, community worship, and communal acts of charity,
+                many Muslims find Eid Al-Adha a time for solitary spiritual reflection. In
+                remembrance of Prophet Ibrahim’s sacrifice and devotion towards God, Eid Al-Adha can be an important
+                time for deep personal reflection.</p>
+            <p>With the stories of Prophet Ibrahim’s sacrifice and the thought of millions of Muslims making the pilgrimage of Hajj, it can sometimes feel a bit overwhelming. What have we done in our lives to compare to the sacrifice that Ibrahim made to Allah? Are we truly being proactive in our actions as Muslims, or have we simply become compliant Muslims, who may only do the physical acts of worship but are lacking in the spiritual devotion towards Allah?</p>
+            <button class="donate-button">Explore More</button>
+        </div>       
+    </section>
+<main>
+    <section class="box-area">
+        <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti, debitis?</p>
+        <div class="two-boxes">
+            <div class="each-box">
+                <div>
+                    <img src="./images/Frame.png" alt="frame image">
+                </div>
+                <div class="box-describe">
+                    <h3>Lorem ipsum</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam ab amet vel suscipit.</p>
+                    <a class="button" href="#">Send Now</a>
+                </div>                
+            </div>
+            <div class="each-box">
+                <div>
+                    <img src="./images/Frame.png" alt="frame image">
+                </div>
+                <div class="box-describe">
+                    <h3>Lorem ipsum</h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam ab amet vel suscipit.</p>
+                    <a class="button" href="#">Send Now</a>
+                </div>
+            </div>
+        </div>
+        <div class="two-boxes">
+                    <div class="each-box">
+                        <div>
+                            <img src="./images/Frame.png" alt="frame image">
+                        </div>
+                        <div class="box-describe">
+                            <h3>Lorem ipsum</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam ab amet vel suscipit.
+                            </p>
+                            <a class="button" href="#">Send Now</a>
+                        </div>
+                    </div>
+                    <div class="each-box">
+                        <div>
+                            <img src="./images/Frame.png" alt="frame image">
+                        </div>
+                        <div class="box-describe">
+                            <h3>Lorem ipsum</h3>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam ab amet vel suscipit.
+                            </p>
+                            <a class="button" href="#">Send Now</a>
+                        </div>
+                    </div>
+        </div>
+    </section>
+    </main>
 </body>
 </html>
